Correção de texto e ajuste de cores

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="assets/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/prism.css">
     <!-- Theme CSS -->  
-    <link id="theme-style" rel="stylesheet" href="assets/css/styles-3.css">
+    <link id="theme-style" rel="stylesheet" href="assets/css/styles.css">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -63,7 +63,7 @@
     <section id="promo" class="promo section offset-header">
         <div class="container text-center">
             <img src="assets/img/e5r-logo-white.png">
-            <p class="intro">Um time de desenvolvimento de softwares comprometido com a solução de problemas de forma inteligente.</p>
+            <p class="intro">Um time de desenvolvimento de softwares que soluciona problemas de forma inteligente.</p>
             <div class="btns">
                 <a class="btn btn-cta-secondary" href="http://github.com/e5r" target="_blank">GitHub</a>
                 <a class="btn btn-cta-primary" href="https://plus.google.com/communities/117090914575759929852" target="_blank">Google+</a>
@@ -141,11 +141,15 @@
                     <ul class=" list-group">
                         <li class="list-group-item">
                             <span class="badge">funcional</span>
-                            <a href="https://github.com/e5r/env" target="_blank">E5R Environment</a>
+                            <a href="https://e5r.github.io/env" target="_blank">E5R Environment</a>
                         </li>
                         <li class="list-group-item">
                             <span class="badge">ideia</span>
-                            <a href="https://github.com/e5r/krunt" target="_blank">Krunt</a>
+                            <a href="https://e5r.github.io/artisan" target="_blank">E5R Software Artisan</a>
+                        </li>
+                        <li class="list-group-item">
+                            <span class="badge">ideia</span>
+                            <a href="https://e5r.github.io/krunt" target="_blank">Krunt</a>
                         </li>
                         <li class="list-group-item">
                             <span class="badge">descontinuado</span>
@@ -153,7 +157,7 @@
                         </li>
                         <li class="list-group-item">
                             <span class="badge">ideia</span>
-                            <a href="https://github.com/e5r/aaa-simplesample" target="_blank">AAA Simple Sample</a>
+                            <a href="https://e5r.github.io/aaa-simplesample" target="_blank">AAA Simple Sample</a>
                         </li>
                         <li class="list-group-item">
                             <span class="badge">funcional</span>
@@ -180,7 +184,7 @@
                 <p>Neste vídeo tutorial o autor mostra como você preparar o seu ambiente para desenvolvimento usando a nova plataforma ASP.NET vNext da Microsoft, sem a necessidade de usar o Visual Studio.</p>
                 <ul class="list-unstyled">
                     <li><strong>Autor:</strong> Erlimar Silva Campos (<a href="https://twitter.com/erlimar" target="_blank">@erlimar</a>)</li>
-                    <li><strong>Web:</strong> <a href="http://goo.gl/xTr3C9">erlimar.wordpress.com</a></li>
+                    <li><strong>Link do artigo:</strong> <a href="http://goo.gl/xTr3C9" target="_blank">http://goo.gl/xTr3C9</a> <span class="label label-info">erlimar.wordpress.com</span></li>
                     <li><strong>Tags:</strong>
                         <span class="label label-default">C#</span>
                         <span class="label label-default">.NET</span>
@@ -188,12 +192,16 @@
                         <span class="label label-default">Microsoft</span>
                         <span class="label label-default">Atom</span>
                         <span class="label label-default">Git</span>
-                        <span class="label label-default">kpm</span>
-                        <span class="label label-default">kvm</span>
-                        <span class="label label-default">k</span>
-                        <span class="label label-default">klr</span>
+                        <span class="label label-default">KPM</span>
+                        <span class="label label-default">KVM</span>
+                        <span class="label label-default">K</span>
+                        <span class="label label-default">KLR</span>
+                        <span class="label label-default">Roslyn</span>
                     </li>
                 </ul>
+                <div class="embed-responsive embed-responsive-16by9">
+                  <iframe class="embed-responsive-item" type="text/html" src="https://www.youtube.com/embed/yOEPOOW2lS4?version=3&amp;rel=1&amp;fs=1&amp;showsearch=0&amp;showinfo=1&amp;iv_load_policy=1&amp;wmode=transparent"></iframe>
+                </div>
             </div><!--//block-->
             
             <div class="block">
@@ -208,7 +216,7 @@
         </div><!--//container-->
     </section><!--//features-->
     
-    <!-- ******CONTATO****** --> 
+    <!-- ******O TIME****** --> 
     <section id="contact" class="contact section has-pattern">
         <div class="container">
             <div class="contact-inner">
@@ -220,7 +228,7 @@
                     </div><!--//profile-->
                     <div class="speech-bubble">
                         <h3 class="sub-title">Erlimar Silva Campos</h3>
-                        <p>Quem saber mais sobre o que faço no dia-a-dia, siga-me em <a href="https://twitter.com/erlimar" target="_blank">@erlimar</a> 
+                        <p>Quer saber mais sobre o que faço no dia-a-dia, siga-me em <a href="https://twitter.com/erlimar" target="_blank">@erlimar</a> 
                         <p>Sou programador à cerca de 13 anos, programo em C/C++/C#, Delphi, PHP, Python e JavaScript. Na verdade em algumas outras linguagens, mas essas são as que mais gosto!</p>
                     </div><!--//speech-bubble-->                        
                 </div><!--//author-message-->
