--- a/index.html
+++ b/index.html
@@ -239,7 +239,12 @@
                     </div><!--//profile-->
                     <div class="speech-bubble">
                         <h3 class="sub-title">Você</h3>
-                        <p>Já imaginou você aqui?</p>
+                        <p>Já imaginou você aqui?
+                            <ol>
+                                <li>Procure a comunidade <strong>E5R</strong> no Google+ e peça para entrar (é uma comunidade privada);</li>
+                                <li>ou, Envie um Twitter para <strong>@erlimar</strong> e peça pra entrar.</li>
+                            </ol>
+                        </p>
                     </div><!--//speech-bubble-->                        
                 </div><!--//author-message-->
             </div><!--//contact-inner-->
